[gd_scene load_steps=4 format=3 uid="uid://c770qa1xyefvv"]

[ext_resource type="Texture2D" uid="uid://d0egbrasmuxvw" path="res://icon.svg" id="1_ejaxc"]
[ext_resource type="Script" path="res://Scripts/wall_plant.gd" id="1_rslq7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pbyml"]
radius = 169.003

[node name="Wall Plant" type="Node2D" node_paths=PackedStringArray("projectileSpawnPosition")]
script = ExtResource("1_rslq7")
projectileSpawnPosition = NodePath("Projectile Spawn position")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ejaxc")

[node name="Projectile Spawn position" type="Marker2D" parent="."]
position = Vector2(0, -70.815)
gizmo_extents = 20.5

[node name="Player Detection Area" type="Area2D" parent="." groups=["Detection Area"]]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection Area" groups=["Detection Area"]]
position = Vector2(0, -100)
shape = SubResource("CircleShape2D_pbyml")
debug_color = Color(0.621013, 0.527946, 0.228844, 0.42)

[node name="Cooldown" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Player Detection Area" to="." method="_on_player_detection_area_area_entered"]
[connection signal="area_exited" from="Player Detection Area" to="." method="_on_player_detection_area_area_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
